tests/ui/rename_all_wrong_casing.stderr
error: proc-macro derive panicked
  --> $DIR/rename_all_wrong_casing.rs:11:10
   |
11 | #[derive(StructOpt, Debug)]
   |          ^^^^^^^^^
   |
   = help: message: unsupported casing: fail
